# research-agent

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
docs/: architecture.md  research-workflow.md  user-journeys.md
examples/: api_walkthrough.py  curl_walkthrough.sh  library_usage.py  seed_demo.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  api.ts  styles.css  types.ts
frontend/src/components/: ApprovalCard.test.tsx  ApprovalCard.tsx  Chat.test.tsx  Chat.tsx  Login.tsx  SettingsDialog.tsx  SidePanel.tsx  Sidebar.tsx
frontend/src/test/: setup.ts
src/deep_harness/: __init__.py  agent.py  cli.py  compute.py  config.py  crypto.py  messages.py  model_providers.py  prompts.py  research_server.py  subagents.py
src/deep_harness/server/: __init__.py  agents.py  app.py  auth.py  db.py  routes.py  schemas.py  streaming.py
src/deep_harness/skills/gpu-data-science/: SKILL.md
src/deep_harness/skills/pytorch-training/: SKILL.md
src/deep_harness/tools/: __init__.py  compute.py  database.py  experiments.py  knowledge_graph.py  planning.py  research.py  semantics.py
tests/: conftest.py  test_agent_build.py  test_agent_e2e.py  test_compute.py  test_crypto.py  test_db_migration.py  test_experiments.py  test_hitl.py  test_model_providers.py  test_research.py  test_server.py  test_tools.py
